# lorabees

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Makefile  README.md  mx.scratch  proj.ioc
Docs/: asciiplot.c  nodered-bees.flow  peakdetect.c
Docs/data/: msg.csv  msg.json  parse.php  sample.ods
Drivers/BME680/: bme680.c
Drivers/STM32L0xx_HAL_Driver/Inc/: stm32l0xx_hal.h  stm32l0xx_hal_def.h
Drivers/STM32L0xx_HAL_Driver/Src/: stm32l0xx_hal_i2c.c  stm32l0xx_ll_utils.c
Inc/: Commissioning.h  debug.h  hw.h  hw_i2c.h  main.h  spi.h  stm32l0xx_hal_conf.h  stm32l0xx_hw_conf.h  stm32l0xx_it.h  tim.h
Src/: adc.c  audio.c  audio.h  debug.c  gpio.c  hw_i2c.c  hw_spi.c  i2c.c  main.c  payload_builder.c  payload_builder.h  payload_parser.c  payload_parser.h  spi.c  stm32l0xx_hw.c  stm32l0xx_it.c  system.tmp  tim.c  usart.c  voc_sensor.c  voc_sensor.h
junk/: i2c.h  main.c  stm32l0xx_hal_conf.h  stm32l0xx_it.h  usart.h
