cmake_minimum_required(VERSION 3.9)
project(proj)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Drivers/CMSIS/Device/ST/STM32L0xx/Include/stm32l073xx.h
        Drivers/CMSIS/Device/ST/STM32L0xx/Include/stm32l0xx.h
        Drivers/CMSIS/Device/ST/STM32L0xx/Include/system_stm32l0xx.h
        Drivers/CMSIS/Include/arm_common_tables.h
        Drivers/CMSIS/Include/arm_const_structs.h
        Drivers/CMSIS/Include/arm_math.h
        Drivers/CMSIS/Include/cmsis_armcc.h
        Drivers/CMSIS/Include/cmsis_armcc_V6.h
        Drivers/CMSIS/Include/cmsis_gcc.h
        Drivers/CMSIS/Include/core_cm0.h
        Drivers/CMSIS/Include/core_cm0plus.h
        Drivers/CMSIS/Include/core_cm3.h
        Drivers/CMSIS/Include/core_cm4.h
        Drivers/CMSIS/Include/core_cm7.h
        Drivers/CMSIS/Include/core_cmFunc.h
        Drivers/CMSIS/Include/core_cmInstr.h
        Drivers/CMSIS/Include/core_cmSimd.h
        Drivers/CMSIS/Include/core_sc000.h
        Drivers/CMSIS/Include/core_sc300.h
        Drivers/STM32L0xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_cortex.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_def.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_dma.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_flash.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_flash_ex.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_flash_ramfunc.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_gpio.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_gpio_ex.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_i2c.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_i2c_ex.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_pwr.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_pwr_ex.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_rcc.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_rcc_ex.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_rtc.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_rtc_ex.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_spi.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_tim.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_tim_ex.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_uart.h
        Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_uart_ex.h
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_cortex.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_dma.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_flash.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_flash_ex.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_flash_ramfunc.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_gpio.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_i2c.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_i2c_ex.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_pwr.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_pwr_ex.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_rcc.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_rcc_ex.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_rtc.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_rtc_ex.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_spi.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_tim.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_tim_ex.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_uart.c
        Drivers/STM32L0xx_HAL_Driver/Src/stm32l0xx_hal_uart_ex.c
        Inc/gpio.h
        Inc/i2c.h
        Inc/main.h
        Inc/rtc.h
        Inc/spi.h
        Inc/stm32l0xx_hal_conf.h
        Inc/stm32l0xx_it.h
        Inc/usart.h
        Src/gpio.c
        Src/i2c.c
        Src/main.c
        Src/rtc.c
        Src/spi.c
        Src/stm32l0xx_hal_msp.c
        Src/stm32l0xx_it.c
        Src/system_stm32l0xx.c
        Src/usart.c)

include_directories(Drivers/CMSIS/Device/ST/STM32L0xx/Include)
include_directories(Drivers/CMSIS/Include)
include_directories(Drivers/STM32L0xx_HAL_Driver/Inc)
include_directories(Drivers/STM32L0xx_HAL_Driver/Inc/Legacy)
include_directories(Inc)

add_executable(proj ${SOURCE_FILES})